--- a/service.yaml
+++ b/service.yaml
@@ -4,7 +4,9 @@ metadata:
   name: web-service
 spec:
   type: ClusterIP
+  selector:
+    app: web
   ports:
-  - name: web
+  - name: app-port
     port: 80
     targetPort: 80
