--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: "nginx-api"
-          image: "nginx:latest"
+          image: nginx:1.14.2
           ports:
           - containerPort: 80
