--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: "nginx-api"
-          image: nginx:1.14.2
+          image: imsny/demo-project:latest
           ports:
           - containerPort: 80
