--- a/.github/workflows/kubernetes.yaml
+++ b/.github/workflows/kubernetes.yaml
@@ -17,6 +17,6 @@ jobs:
         echo ${{ secrets.KUBE_CONFIG }} | base64 --decode > ${HOME}/.kube/config
         cat ${HOME}/.kube/config
     - name: Use context
-      run: kubectl config use-context octobay-api
+      run: kubectl config use-context gke_maropost-marketing-staging_us-central1-c_demo-project
     - name: Deploy to K8s
       run: kubectl get pods
