--- a/.github/workflows/kubernetes.yaml
+++ b/.github/workflows/kubernetes.yaml
@@ -5,8 +5,8 @@ on:
     branches: [ main ]
 
 jobs:
-  setup-build-publish-deploy:
-    name: Setup, Build, Publish, and Deploy
+  setup-build-publish:
+    name: Build and Publish
     runs-on: ubuntu-latest
     environment: production
 
@@ -37,9 +37,9 @@ jobs:
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/demo-project:latest
 
   setup-and-deploy:
-    needs: [setup-build-publish-deploy]
+    needs: [setup-build-publish]
 
-    name: Setup and Deploy
+    name: Deploy to production
     runs-on: ubuntu-latest
 
     permissions:
@@ -62,5 +62,9 @@ jobs:
         location: ${{ secrets.GKE_CLUSTER_ZONE }}
 
     - name: Deploy on the GKE
+      run: |-
+        kubectl apply -f deployment.yaml
+
+    - name: Check Pods
       run: |-
         kubectl get pods
