--- a/.github/workflows/kubernetes.yaml
+++ b/.github/workflows/kubernetes.yaml
@@ -63,7 +63,7 @@ jobs:
 
     - name: Deploy on the GKE
       run: |-
-        kubectl apply -f deployment.yaml
+        kubectl rollout restart deployment web
 
     - name: Check Pods
       run: |-
