--- a/.github/workflows/kubernetes.yaml
+++ b/.github/workflows/kubernetes.yaml
@@ -35,6 +35,7 @@ jobs:
           file: ./Dockerfile
           push: true
           no-cache: true
+          platforms: "linux/amd64"
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/demo-project:latest
 
   setup-and-deploy:
