--- a/deployment.yaml
+++ b/deployment.yaml
@@ -17,5 +17,6 @@ spec:
       containers:
         - name: "nginx-api"
           image: imsny/demo-project:latest
+          imagePullPolicy: Always
           ports:
           - containerPort: 80
