--- a/.github/workflows/kubernetes.yaml
+++ b/.github/workflows/kubernetes.yaml
@@ -4,9 +4,6 @@ on:
   push:
     branches: [ main ]
 
-env:
-  TAG: $(date +%Y%m-%d-%H-%M)
-
 jobs:
   setup-build-publish:
     name: Build and Publish
@@ -21,6 +18,11 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v4
+
+      - 
+        name: Get current date
+        id: date
+        run: echo "today={$(date +'%Y-%m-%d')}" >> $TAG
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -39,7 +41,7 @@ jobs:
           push: true
           no-cache: true
           platforms: "linux/amd64"
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/demo-project:${{ env.TAG }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/demo-project:${TAG}
 
   setup-and-deploy:
     needs: [setup-build-publish]
@@ -68,7 +70,7 @@ jobs:
 
     - name: Deploy on the GKE
       run: |-
-        kubectl set image deployment/web nginx-api=imsny/demo-project:${{ env.TAG }}
+        kubectl set image deployment/web nginx-api=imsny/demo-project:${TAG}
 
     - name: Check Pods
       run: |-
