--- a/.github/workflows/kubernetes.yaml
+++ b/.github/workflows/kubernetes.yaml
@@ -22,7 +22,7 @@ jobs:
       - 
         name: Get current date
         id: date
-        run: echo "today={$(date +'%Y-%m-%d')}" >> $TAG
+        run: echo "today={$(date +'%Y-%m-%d')}" >> $GITHUB_ENV
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -41,7 +41,7 @@ jobs:
           push: true
           no-cache: true
           platforms: "linux/amd64"
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/demo-project:${TAG}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/demo-project:${{GITHUB_ENV}}
 
   setup-and-deploy:
     needs: [setup-build-publish]
@@ -70,7 +70,7 @@ jobs:
 
     - name: Deploy on the GKE
       run: |-
-        kubectl set image deployment/web nginx-api=imsny/demo-project:${TAG}
+        kubectl set image deployment/web nginx-api=imsny/demo-project:${{GITHUB_ENV}}
 
     - name: Check Pods
       run: |-
