--- a/.github/workflows/kubernetes.yaml
+++ b/.github/workflows/kubernetes.yaml
@@ -21,6 +21,14 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v4
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+
+      - name: Test with environment variables
+        run: echo $TAG
+        env:
+          TAG: nightly-tag-${{ steps.date.outputs.date }}
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -39,7 +47,7 @@ jobs:
           push: true
           no-cache: true
           platforms: "linux/amd64"
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/demo-project:${{ steps.datetime.outputs.tag }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/demo-project:${{ env.TAG }}
 
   setup-and-deploy:
     needs: [setup-build-publish]
@@ -68,7 +76,7 @@ jobs:
 
     - name: Deploy on the GKE
       run: |-
-        kubectl set image deployment/web nginx-api=imsny/demo-project:${{ steps.datetime.outputs.tag }}
+        kubectl set image deployment/web nginx-api=imsny/demo-project:${{ env.TAG }}
 
     - name: Check Pods
       run: |-
