--- a/.github/workflows/kubernetes.yaml
+++ b/.github/workflows/kubernetes.yaml
@@ -18,14 +18,14 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v4
-      - name: Get current date
-        id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
-
-      - name: Test with environment variables
-        run: echo $TAG
-        env:
-          TAG: nightly-tag-${{ steps.date.outputs.date }}
+      -
+        name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ secrets.DOCKERHUB_USERNAME }}/demo-project
+          tags: |
+            type=raw,value={{date 'YYYYMMDD'}}
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -44,7 +44,8 @@ jobs:
           push: true
           no-cache: true
           platforms: "linux/amd64"
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/demo-project:${{ env.TAG }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
 
   setup-and-deploy:
     needs: [setup-build-publish]
