--- a/.github/workflows/kubernetes.yaml
+++ b/.github/workflows/kubernetes.yaml
@@ -19,14 +19,6 @@ jobs:
         name: Checkout
         uses: actions/checkout@v4
       -
-        name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ secrets.DOCKERHUB_USERNAME }}/demo-project
-          tags: |
-            type=raw,value={{date 'YYYYMMDD'}}
-      -
         name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -44,8 +36,7 @@ jobs:
           push: true
           no-cache: true
           platforms: "linux/amd64"
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/demo-project:${{ github.sha }}
 
   setup-and-deploy:
     needs: [setup-build-publish]
@@ -74,7 +65,8 @@ jobs:
 
     - name: Deploy on the GKE
       run: |-
-        kubectl set image deployment/web nginx-api=imsny/demo-project:${{ steps.meta.outputs.tags }}
+        echo ${{ steps.meta.outputs.tags }}
+        kubectl set image deployment/web nginx-api=imsny/demo-project:${{ github.sha }}
 
     - name: Check Pods
       run: |-
